# gex-corporation--desafio-tecnico

./: .gitignore
gex_test_emmanuel/: .gitignore  DESAFIO_CONCEITUAL.md  EVIDENCES.md  Makefile  README.md  docker-compose.yml  pyproject.toml
gex_test_emmanuel/integration-api/: Dockerfile  Makefile  README.md  pyproject.toml
gex_test_emmanuel/integration-api/app/: main.py
gex_test_emmanuel/integration-api/app/core/: config.py  database.py
gex_test_emmanuel/integration-api/app/db/: __init__.py
gex_test_emmanuel/integration-api/app/models/: __init__.py  webhook.py
gex_test_emmanuel/integration-api/app/routers/: __init__.py  webhook.py
gex_test_emmanuel/integration-api/app/utils/: rabbitmq.py
gex_test_emmanuel/integration-api/sql/: 001_create_tables.sql
gex_test_emmanuel/integration-api/tests/: conftest.py
gex_test_emmanuel/integration-api/tests/integration/: test_rabbitmq.py  test_webhook.py
gex_test_emmanuel/integration-api/tests/unit/: test_rabbitmq_utils.py
gex_test_emmanuel/integration_api/: .dockerignore  .editorconfig  .env.example  Dockerfile  README.md
gex_test_emmanuel/integration_api/app/: main.py
gex_test_emmanuel/integration_api/app/core/: redis.py
gex_test_emmanuel/integration_api/app/db/: __init__.py
gex_test_emmanuel/integration_api/app/models/: webhook.py
gex_test_emmanuel/integration_api/sql/: 000_create_databases.sql  001_create_tables.sql  002_create_stored_procedures.sql
gex_test_emmanuel/integration_api/tests/: __init__.py  conftest.py
gex_test_emmanuel/integration_consumer/: __init__.py  config.py  consumer.py  main.py  pyproject.toml
gex_test_emmanuel/integration_consumer/services/: __init__.py  lead_received.py
gex_test_emmanuel/integration_consumer/tests/: conftest.py
gex_test_emmanuel/integration_consumer/tests/integration/: test_consumer_integration.py
gex_test_emmanuel/integration_consumer/tests/unit/: test_consumer.py
gex_test_emmanuel/integration_consumer_channels/: Dockerfile  README.md  __init__.py  config.py  consumer.py  main.py  pyproject.toml
gex_test_emmanuel/integration_consumer_channels/services/: sms.py
gex_test_emmanuel/integration_consumer_channels/tests/: conftest.py  test_sms.py  test_sms_sqlite_integration.py
gex_test_emmanuel/integration_consumer_webhook/: Dockerfile  Makefile  README.md  config.py  consumer.py  main.py  pyproject.toml
gex_test_emmanuel/integration_consumer_webhook/services/: lead_received.py
gex_test_emmanuel/integration_consumer_webhook/tests/: conftest.py
gex_test_emmanuel/integration_consumer_webhook/tests/integration/: test_consumer_integration.py
gex_test_emmanuel/integration_consumer_webhook/tests/unit/: test_consumer.py  test_lead_received.py
gex_test_emmanuel/test_runner/: Dockerfile  Makefile  main.py  pyproject.toml
public_material/: expected_summary.xlsx  expected_summary_meta.json  grummer_secret.txt  webhook_payloads.json
(+11 files in other folders)
