[project]
name = "integration-api"
version = "0.1.0"
description = "Integration API built with FastAPI"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "cryptography>=46.0.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "redis>=5.0.0",
    "aio-pika<=9.6.2",
    "httpx>=0.28.1",
    "aiomysql>=0.0.21",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "fakeredis>=2.1.0",
    "aiosqlite>=0.18.0",
    "ruff>=0.15.12",
]

[project.scripts]
start = "app.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
