[project]
name = "integration-consumer"
version = "0.1.0"
description = "Async RabbitMQ consumer for webhook events"
requires-python = ">=3.13"
dependencies = [
    "aio-pika>=8.3.0",
    "aiomysql>=0.1.0",
    # Required by PyMySQL for MySQL 8's caching_sha2_password/sha256_password auth
    "cryptography>=42",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.15.12",
]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # Pyflakes
    "I",    # isort
    "C4",   # flake8-comprehensions
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # fastapi dependency injection pattern
]

[tool.ruff.lint.isort]
known-first-party = ["app"]
known-third-party = ["fastapi", "pydantic", "sqlalchemy"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
